{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 63,
  "lineage": "7ac696fb-5121-75ea-7574-c233c9fc42ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "main-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:957362393943:loadbalancer/main-elb",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-elb-1352978122.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "main-elb",
            "idle_timeout": 60,
            "instances": [
              "i-00da0f983f22146de",
              "i-060b4dd95b896541e"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:eu-central-1:957362393943:certificate/7fd31038-d56e-4bfb-99c9-999bf49652e6"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "main-elb",
            "security_groups": [
              "sg-0b74da74d93e06783"
            ],
            "source_security_group": "957362393943/terraform-20220317082054949900000002",
            "source_security_group_id": "sg-0b74da74d93e06783",
            "subnets": [
              "subnet-01986264ba48409ad",
              "subnet-059c3d053fa4bdb03"
            ],
            "tags": {
              "Name": "Main ELB"
            },
            "tags_all": {
              "Name": "Main ELB"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_instance.win-instance-1",
            "aws_instance.win-instance-2",
            "aws_security_group.sec-group",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "win-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0156572b534935781",
            "arn": "arn:aws:ec2:eu-central-1:957362393943:instance/i-00da0f983f22146de",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00da0f983f22146de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "meldm",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ca84b809565ba0f",
            "private_dns": "ip-10-0-0-46.eu-central-1.compute.internal",
            "private_ip": "10.0.0.46",
            "public_ip": "18.185.177.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7a70f238af7f833",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059c3d053fa4bdb03",
            "tags": {
              "Name": "Win-instance-1"
            },
            "tags_all": {
              "Name": "Win-instance-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b74da74d93e06783"
            ]
          },
          "dependencies": [
            "aws_security_group.sec-group",
            "aws_subnet.subnet1",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "win-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0156572b534935781",
            "arn": "arn:aws:ec2:eu-central-1:957362393943:instance/i-060b4dd95b896541e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060b4dd95b896541e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "meldm",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0593c6d3b1d13ad2a",
            "private_dns": "ip-10-0-1-19.eu-central-1.compute.internal",
            "private_ip": "10.0.1.19",
            "public_ip": "3.72.13.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bcbe1f5eeec94ddc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01986264ba48409ad",
            "tags": {
              "Name": "Win-instance-2"
            },
            "tags_all": {
              "Name": "Win-instance-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b74da74d93e06783"
            ]
          },
          "dependencies": [
            "aws_security_group.sec-group",
            "aws_subnet.subnet2",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:internet-gateway/igw-037b2d350e1769a37",
            "id": "igw-037b2d350e1769a37",
            "owner_id": "957362393943",
            "tags": {
              "Name": "igw-main"
            },
            "tags_all": {
              "Name": "igw-main"
            },
            "vpc_id": "vpc-0e8d774a08a310d82"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-tbl-global",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:route-table/rtb-0231ef6e93cf25680",
            "id": "rtb-0231ef6e93cf25680",
            "owner_id": "957362393943",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037b2d350e1769a37",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-tbl-1"
            },
            "tags_all": {
              "Name": "route-tbl-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8d774a08a310d82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-main",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-tbl-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0da05c6ef0fb550",
            "route_table_id": "rtb-0231ef6e93cf25680",
            "subnet_id": "subnet-059c3d053fa4bdb03"
          },
          "dependencies": [
            "aws_internet_gateway.igw-main",
            "aws_route_table.route-tbl-global",
            "aws_subnet.subnet1",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-tbl-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083cd781952af8db3",
            "route_table_id": "rtb-0231ef6e93cf25680",
            "subnet_id": "subnet-01986264ba48409ad"
          },
          "dependencies": [
            "aws_internet_gateway.igw-main",
            "aws_route_table.route-tbl-global",
            "aws_subnet.subnet2",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:security-group/sg-0b74da74d93e06783",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b74da74d93e06783",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5985,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5985
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5986,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5986
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220317082054949900000002",
            "name_prefix": "terraform-",
            "owner_id": "957362393943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-group-rdp-http-winrm"
            },
            "tags_all": {
              "Name": "sec-group-rdp-http-winrm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8d774a08a310d82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:subnet/subnet-059c3d053fa4bdb03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059c3d053fa4bdb03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957362393943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1-a"
            },
            "tags_all": {
              "Name": "subnet1-a"
            },
            "vpc_id": "vpc-0e8d774a08a310d82"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:subnet/subnet-01986264ba48409ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01986264ba48409ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957362393943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2-b"
            },
            "tags_all": {
              "Name": "subnet2-b"
            },
            "vpc_id": "vpc-0e8d774a08a310d82"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:vpc/vpc-0e8d774a08a310d82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-050b8aac9121a90a7",
            "default_route_table_id": "rtb-0a83f90c02dbd7a9f",
            "default_security_group_id": "sg-0fdadfb5afe114c87",
            "dhcp_options_id": "dopt-03922e25996e06c9e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e8d774a08a310d82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a83f90c02dbd7a9f",
            "owner_id": "957362393943",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}